--- a/photography-portfolio/package.json
+++ b/photography-portfolio/package.json
@@ -13,8 +13,9 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "embla-carousel": "^8.1.5",
     "embla-carousel-autoplay": "^8.0.4",
-    "embla-carousel-react": "^8.0.4",
+    "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.1.7",
     "localforage": "^1.10.0",
     "locomotive-scroll": "^5.0.0-beta.12",
