--- a/photography-portfolio/package.json
+++ b/photography-portfolio/package.json
@@ -13,12 +13,14 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "framer-motion": "^11.1.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
